--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
     "emotion": "^9.2.9",
     "emotion-server": "^9.2.9",
     "gatsby": "^2.0.0",
+    "gatsby-plugin-catch-links": "^2.0.2",
     "gatsby-plugin-emotion": "^2.0.5",
     "gatsby-plugin-typography": "^2.2.0",
+    "gatsby-remark-images": "^2.0.1",
     "gatsby-source-filesystem": "^2.0.1",
     "gatsby-transformer-remark": "^2.1.3",
     "react": "^16.5.1",
