--- a/package.json
+++ b/package.json
@@ -13,10 +13,13 @@
     "gatsby": "^2.0.0",
     "gatsby-plugin-catch-links": "^2.0.2",
     "gatsby-plugin-emotion": "^2.0.5",
+    "gatsby-plugin-sharp": "^2.0.5",
     "gatsby-plugin-typography": "^2.2.0",
+    "gatsby-remark-copy-linked-files": "^2.0.5",
     "gatsby-remark-images": "^2.0.1",
     "gatsby-source-filesystem": "^2.0.1",
     "gatsby-transformer-remark": "^2.1.3",
+    "gatsby-transformer-sharp": "^2.1.1",
     "react": "^16.5.1",
     "react-dom": "^16.5.1",
     "react-emotion": "^9.2.9",
