--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "emotion": "^9.2.9",
     "emotion-server": "^9.2.9",
     "gatsby": "^2.0.0",
+    "gatsby-image": "^2.0.10",
     "gatsby-plugin-catch-links": "^2.0.2",
     "gatsby-plugin-emotion": "^2.0.5",
     "gatsby-plugin-sharp": "^2.0.5",
@@ -24,6 +25,7 @@
     "react-dom": "^16.5.1",
     "react-emotion": "^9.2.9",
     "react-typography": "^0.16.13",
+    "sharp": "^0.20.8",
     "slash": "^2.0.0",
     "typography": "^0.16.17",
     "typography-theme-kirkham": "^0.16.3"
