--- a/package.json
+++ b/package.json
@@ -9,25 +9,25 @@
     "deploy": "gatsby build && gh-pages -d public -b master"
   },
   "dependencies": {
-    "emotion": "^9.2.9",
-    "emotion-server": "^9.2.9",
-    "gatsby": "^2.0.0",
+    "babel-plugin-styled-components": "^1.7.1",
+    "gatsby": "^2.0.11",
     "gatsby-image": "^2.0.10",
-    "gatsby-plugin-catch-links": "^2.0.2",
-    "gatsby-plugin-emotion": "^2.0.5",
+    "gatsby-plugin-catch-links": "^2.0.3",
+    "gatsby-plugin-offline": "^2.0.5",
     "gatsby-plugin-sharp": "^2.0.5",
+    "gatsby-plugin-styled-components": "^3.0.0",
     "gatsby-plugin-typography": "^2.2.0",
     "gatsby-remark-copy-linked-files": "^2.0.5",
-    "gatsby-remark-images": "^2.0.1",
+    "gatsby-remark-images": "^2.0.3",
     "gatsby-source-filesystem": "^2.0.1",
-    "gatsby-transformer-remark": "^2.1.3",
-    "gatsby-transformer-sharp": "^2.1.1",
+    "gatsby-transformer-remark": "^2.1.4",
+    "gatsby-transformer-sharp": "^2.1.2",
     "react": "^16.5.1",
     "react-dom": "^16.5.1",
-    "react-emotion": "^9.2.9",
     "react-typography": "^0.16.13",
     "sharp": "^0.20.8",
     "slash": "^2.0.0",
+    "styled-components": "^3.4.9",
     "typography": "^0.16.17",
     "typography-theme-kirkham": "^0.16.3"
   },
