Added gatsby SASS functionality and Normalize CSS

--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "gatsby-image": "^2.0.10",
     "gatsby-plugin-catch-links": "^2.0.3",
     "gatsby-plugin-offline": "^2.0.5",
+    "gatsby-plugin-sass": "^2.0.1",
     "gatsby-plugin-sharp": "^2.0.5",
     "gatsby-plugin-styled-components": "^3.0.0",
     "gatsby-plugin-typography": "^2.2.0",
@@ -22,6 +23,8 @@
     "gatsby-source-filesystem": "^2.0.1",
     "gatsby-transformer-remark": "^2.1.4",
     "gatsby-transformer-sharp": "^2.1.2",
+    "node-sass": "^4.9.3",
+    "normalize.css": "^8.0.0",
     "react": "^16.5.1",
     "react-dom": "^16.5.1",
     "react-typography": "^0.16.13",
