--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "slash": "^2.0.0",
     "styled-components": "^3.4.9",
     "typography": "^0.16.17",
+    "typography-theme-fairy-gates": "^0.15.11",
     "typography-theme-kirkham": "^0.16.3"
   },
   "devDependencies": {
