--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "gatsby-source-filesystem": "^2.0.1",
     "gatsby-transformer-remark": "^2.1.4",
     "gatsby-transformer-sharp": "^2.1.2",
+    "moment": "^2.22.2",
     "node-sass": "^4.9.3",
     "normalize.css": "^8.0.0",
     "react": "^16.5.1",
