--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "deploy": "gatsby build && gh-pages -d public -b master"
   },
   "dependencies": {
+    "animejs": "^2.2.0",
     "babel-plugin-styled-components": "^1.7.1",
     "gatsby": "^2.0.11",
     "gatsby-image": "^2.0.10",
@@ -28,13 +29,13 @@
     "normalize.css": "^8.0.0",
     "react": "^16.5.1",
     "react-dom": "^16.5.1",
+    "react-flip-toolkit": "^5.0.1",
     "react-typography": "^0.16.13",
     "sharp": "^0.20.8",
     "slash": "^2.0.0",
     "styled-components": "^3.4.9",
     "typography": "^0.16.17",
-    "typography-theme-fairy-gates": "^0.15.11",
-    "typography-theme-kirkham": "^0.16.3"
+    "typography-theme-fairy-gates": "^0.15.11"
   },
   "devDependencies": {
     "gh-pages": "^2.0.0"
