--- a/package.json
+++ b/package.json
@@ -30,14 +30,11 @@
     "normalize.css": "^8.0.0",
     "react": "^16.5.1",
     "react-dom": "^16.5.1",
-    "react-flip-toolkit": "^5.0.1",
     "react-tilt": "^0.1.4",
     "react-typography": "^0.16.13",
     "sharp": "^0.20.8",
     "slash": "^2.0.0",
-    "styled-components": "^3.4.9",
-    "typography": "^0.16.17",
-    "typography-theme-fairy-gates": "^0.15.11"
+    "styled-components": "^3.4.9"
   },
   "devDependencies": {
     "gh-pages": "^2.0.0"
