--- a/package.json
+++ b/package.json
@@ -10,14 +10,13 @@
   },
   "dependencies": {
     "animejs": "^2.2.0",
-    "babel-plugin-styled-components": "^1.7.1",
     "gatsby": "^2.0.11",
     "gatsby-image": "^2.0.10",
     "gatsby-plugin-catch-links": "^2.0.3",
     "gatsby-plugin-offline": "^2.0.5",
+    "gatsby-plugin-react-svg": "^2.0.0",
     "gatsby-plugin-sass": "^2.0.1",
     "gatsby-plugin-sharp": "^2.0.5",
-    "gatsby-plugin-styled-components": "^3.0.0",
     "gatsby-plugin-typography": "^2.2.0",
     "gatsby-remark-copy-linked-files": "^2.0.5",
     "gatsby-remark-images": "^2.0.3",
@@ -31,10 +30,8 @@
     "react": "^16.5.1",
     "react-dom": "^16.5.1",
     "react-tilt": "^0.1.4",
-    "react-typography": "^0.16.13",
     "sharp": "^0.20.8",
-    "slash": "^2.0.0",
-    "styled-components": "^3.4.9"
+    "slash": "^2.0.0"
   },
   "devDependencies": {
     "gh-pages": "^2.0.0"
