--- a/package.json
+++ b/package.json
@@ -9,15 +9,13 @@
     "deploy": "gatsby build && gh-pages -d public -b master"
   },
   "dependencies": {
-    "animejs": "^2.2.0",
     "gatsby": "^2.0.11",
     "gatsby-image": "^2.0.10",
     "gatsby-plugin-catch-links": "^2.0.3",
     "gatsby-plugin-offline": "^2.0.5",
     "gatsby-plugin-react-svg": "^2.0.0",
     "gatsby-plugin-sass": "^2.0.1",
-    "gatsby-plugin-sharp": "^2.0.5",
-    "gatsby-plugin-typography": "^2.2.0",
+    "gatsby-plugin-sharp": "^2.0.15",
     "gatsby-remark-copy-linked-files": "^2.0.5",
     "gatsby-remark-images": "^2.0.3",
     "gatsby-source-filesystem": "^2.0.1",
@@ -27,6 +25,7 @@
     "moment": "^2.22.2",
     "node-sass": "^4.9.3",
     "normalize.css": "^8.0.0",
+    "particles.js": "^2.0.0",
     "react": "^16.5.1",
     "react-dom": "^16.5.1",
     "react-pose": "^4.0.4",
