--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-dom": "^16.6.3",
     "react-pose": "^4.0.4",
     "react-tilt": "^0.1.4",
+    "reading-time": "^1.1.3",
     "sharp": "^0.20.8",
     "slash": "^2.0.0"
   },
