--- a/package.json
+++ b/package.json
@@ -25,9 +25,9 @@
     "moment": "^2.22.2",
     "node-sass": "^4.11.0",
     "normalize.css": "^8.0.1",
-    "particles.js": "^2.0.0",
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
+    "react-particles-js": "^2.4.2",
     "react-pose": "^4.0.4",
     "react-tilt": "^0.1.4",
     "reading-time": "^1.1.3",
