--- a/package.json
+++ b/package.json
@@ -9,13 +9,14 @@
     "deploy": "gatsby build && gh-pages -d public -b master"
   },
   "dependencies": {
-    "gatsby": "^2.0.66",
+    "axios": "^0.18.0",
+    "gatsby": "^2.0.81",
     "gatsby-image": "^2.0.24",
     "gatsby-plugin-catch-links": "^2.0.9",
-    "gatsby-plugin-offline": "^2.0.19",
     "gatsby-plugin-react-svg": "^2.0.0",
+    "gatsby-plugin-remove-serviceworker": "^1.0.0",
     "gatsby-plugin-sass": "^2.0.7",
-    "gatsby-plugin-sharp": "^2.0.15",
+    "gatsby-plugin-sharp": "^2.0.16",
     "gatsby-remark-copy-linked-files": "^2.0.7",
     "gatsby-remark-images": "^2.0.6",
     "gatsby-source-filesystem": "^2.0.12",
@@ -27,6 +28,7 @@
     "normalize.css": "^8.0.1",
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
+    "react-parallax": "^2.0.1",
     "react-particles-js": "^2.4.2",
     "react-pose": "^4.0.4",
     "react-tilt": "^0.1.4",
