--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "node-sass": "^4.11.0",
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
+    "react-player": "^1.9.3",
     "react-pose": "^4.0.6",
     "reading-time": "^1.1.3",
     "slash": "^2.0.0"
