--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "deploy": "gatsby build && gh-pages -d public -b master"
   },
   "dependencies": {
+    "animejs": "^3.0.1",
     "axios": "^0.18.0",
     "gatsby": "^2.1.4",
     "gatsby-image": "^2.0.29",
@@ -30,7 +31,7 @@
     "react-flip-toolkit": "^6.5.6",
     "react-parallax": "^2.1.0",
     "react-player": "^1.9.3",
-    "react-pose": "^4.0.7",
+    "react-waypoint": "^9.0.0",
     "reading-time": "^1.1.3",
     "slash": "^2.0.0"
   },
