--- a/package.json
+++ b/package.json
@@ -11,29 +11,31 @@
   "dependencies": {
     "animejs": "^3.0.1",
     "axios": "^0.18.0",
-    "firebase": "^5.8.5",
-    "gatsby": "^2.1.4",
-    "gatsby-image": "^2.0.29",
-    "gatsby-plugin-catch-links": "^2.0.11",
-    "gatsby-plugin-react-svg": "^2.0.0",
+    "firebase": "^5.9.1",
+    "gatsby": "^2.2.9",
+    "gatsby-image": "^2.0.34",
+    "gatsby-plugin-catch-links": "^2.0.13",
+    "gatsby-plugin-layout": "^1.0.13",
+    "gatsby-plugin-react-svg": "^2.1.1",
     "gatsby-plugin-remove-serviceworker": "^1.0.0",
-    "gatsby-plugin-sass": "^2.0.10",
-    "gatsby-plugin-sharp": "^2.0.20",
-    "gatsby-remark-copy-linked-files": "^2.0.9",
-    "gatsby-remark-images": "^3.0.4",
-    "gatsby-source-filesystem": "^2.0.20",
-    "gatsby-transformer-remark": "^2.2.5",
-    "gatsby-transformer-sharp": "^2.1.13",
+    "gatsby-plugin-sass": "^2.0.11",
+    "gatsby-plugin-sharp": "^2.0.30",
+    "gatsby-remark-copy-linked-files": "^2.0.11",
+    "gatsby-remark-images": "^3.0.10",
+    "gatsby-source-filesystem": "^2.0.28",
+    "gatsby-transformer-remark": "^2.3.8",
+    "gatsby-transformer-sharp": "^2.1.17",
     "lodash": "^4.17.11",
     "moment": "^2.24.0",
     "node-sass": "^4.11.0",
-    "react": "^16.8.2",
-    "react-dom": "^16.8.2",
-    "react-flip-toolkit": "^6.5.6",
+    "react": "^16.8.5",
+    "react-dom": "^16.8.5",
+    "react-flip-toolkit": "^6.5.7",
     "react-google-recaptcha": "^1.0.5",
-    "react-parallax": "^2.1.0",
+    "react-overdrive": "0.0.10",
+    "react-parallax": "^2.2.0",
     "react-player": "^1.9.3",
-    "react-waypoint": "^9.0.0",
+    "react-waypoint": "^9.0.1",
     "reading-time": "^1.1.3",
     "slash": "^2.0.0"
   },
