--- a/package.json
+++ b/package.json
@@ -20,12 +20,12 @@
     "gatsby-plugin-sass": "^2.0.11",
     "gatsby-plugin-sharp": "^2.0.30",
     "gatsby-remark-copy-linked-files": "^2.0.11",
+    "gatsby-remark-embed-video": "^1.7.1",
     "gatsby-remark-images": "^3.0.10",
     "gatsby-source-filesystem": "^2.0.28",
     "gatsby-transformer-remark": "^2.3.8",
     "gatsby-transformer-sharp": "^2.1.17",
     "lodash": "^4.17.11",
-    "moment": "^2.24.0",
     "node-sass": "^4.11.0",
     "react": "^16.8.5",
     "react-dom": "^16.8.5",
@@ -35,7 +35,6 @@
     "react-parallax": "^2.2.0",
     "react-player": "^1.9.3",
     "react-waypoint": "^9.0.1",
-    "reading-time": "^1.1.3",
     "slash": "^2.0.0"
   },
   "devDependencies": {
