--- a/package.json
+++ b/package.json
@@ -26,8 +26,9 @@
     "gatsby-transformer-remark": "^2.3.8",
     "gatsby-transformer-sharp": "^2.1.17",
     "lodash": "^4.17.11",
-    "node-sass": "^4.11.0",
+    "node-sass": "^4.12.0",
     "react": "^16.8.5",
+    "react-burger-menu": "^2.6.10",
     "react-dom": "^16.8.5",
     "react-flip-toolkit": "^6.5.7",
     "react-google-recaptcha": "^1.0.5",
