--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "gatsby-image": "^2.0.34",
     "gatsby-plugin-catch-links": "^2.0.13",
     "gatsby-plugin-layout": "^1.0.14",
+    "gatsby-plugin-manifest": "^2.1.1",
     "gatsby-plugin-react-svg": "^2.1.1",
     "gatsby-plugin-remove-serviceworker": "^1.0.0",
     "gatsby-plugin-sass": "^2.0.11",
