--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "gatsby-source-filesystem": "^2.0.28",
     "gatsby-transformer-remark": "^2.3.8",
     "gatsby-transformer-sharp": "^2.1.17",
-    "lodash": "^4.17.11",
+    "gsap": "^2.1.3",
+    "lodash": "^4.17.15",
     "node-sass": "^4.12.0",
     "react": "^16.8.5",
     "react-burger-menu": "^2.6.10",
