--- a/package.json
+++ b/package.json
@@ -9,39 +9,40 @@
     "deploy": "gatsby build && gh-pages -d public -b master"
   },
   "dependencies": {
-    "animejs": "^3.0.1",
-    "firebase": "^5.9.1",
-    "gatsby": "^2.3.25",
-    "gatsby-image": "^2.0.34",
-    "gatsby-plugin-catch-links": "^2.0.13",
-    "gatsby-plugin-layout": "^1.0.14",
-    "gatsby-plugin-manifest": "^2.1.1",
-    "gatsby-plugin-react-svg": "^2.1.1",
+    "animejs": "^3.1.0",
+    "core-js": "^2.6.9",
+    "firebase": "^5.8.6",
+    "gatsby": "^2.15.28",
+    "gatsby-image": "^2.2.23",
+    "gatsby-plugin-catch-links": "^2.1.12",
+    "gatsby-plugin-layout": "^1.1.10",
+    "gatsby-plugin-manifest": "^2.2.20",
+    "gatsby-plugin-react-svg": "^2.1.2",
     "gatsby-plugin-remove-serviceworker": "^1.0.0",
-    "gatsby-plugin-sass": "^2.0.11",
-    "gatsby-plugin-sharp": "^2.0.30",
-    "gatsby-remark-copy-linked-files": "^2.0.11",
+    "gatsby-plugin-sass": "^2.1.17",
+    "gatsby-plugin-sharp": "^2.2.27",
+    "gatsby-remark-copy-linked-files": "^2.1.23",
     "gatsby-remark-embed-video": "^1.7.1",
-    "gatsby-remark-images": "^3.0.10",
-    "gatsby-source-filesystem": "^2.0.28",
-    "gatsby-transformer-remark": "^2.3.8",
-    "gatsby-transformer-sharp": "^2.1.17",
+    "gatsby-remark-images": "^3.1.25",
+    "gatsby-source-filesystem": "^2.1.28",
+    "gatsby-transformer-remark": "^2.6.26",
+    "gatsby-transformer-sharp": "^2.2.19",
     "gsap": "^2.1.3",
     "lodash": "^4.17.15",
     "node-sass": "^4.12.0",
-    "react": "^16.8.5",
-    "react-burger-menu": "^2.6.10",
-    "react-dom": "^16.8.5",
-    "react-flip-toolkit": "^6.5.7",
-    "react-google-recaptcha": "^1.0.5",
+    "react": "^16.10.1",
+    "react-burger-menu": "^2.6.11",
+    "react-dom": "^16.10.1",
+    "react-flip-toolkit": "^6.6.9",
+    "react-google-recaptcha": "^1.1.0",
     "react-image-palette": "^0.2.4",
-    "react-parallax": "^2.2.0",
-    "react-player": "^1.9.3",
-    "react-waypoint": "^9.0.1",
+    "react-parallax": "^2.2.3",
+    "react-player": "^1.13.0",
+    "react-waypoint": "^9.0.2",
     "sharp": "^0.22.1",
     "slash": "^2.0.0"
   },
   "devDependencies": {
-    "gh-pages": "^2.0.1"
+    "gh-pages": "^2.1.1"
   }
 }
